src/objects/Application_Subsection__c.object
<CustomObject>
    <description>This is part of the application design on the portal.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates if the subsection should be shown.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <description>Component Name</description>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This is the description that would appear on the portal</description>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>License_Reciprocity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Reciprocity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Reinstatement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this for license reinstatement?</description>
        <label>License Reinstatement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is related to any license renewal?</description>
        <label>License Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the related to a license?</description>
        <label>License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>Order Number</description>
        <label>Order Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <description>This is the section that the subsection is found</description>
        <label>Parent</label>
        <referenceTo>Application_Section__c</referenceTo>
        <relationshipLabel>Application Subsections</relationshipLabel>
        <relationshipName>Application_Subsections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Permit_Reinstatement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is this for Permit Reinstatement?</description>
        <label>Permit Reinstatement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this related to permit renewal?</description>
        <label>Permit Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this related to a permit?</description>
        <label>Permit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>to make subsection required</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of component</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Component_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_URL__c</fullName>
        <description>This is the link to the video if a  video is needed</description>
        <inlineHelpText>This is the link to the video if a  video is needed</inlineHelpText>
        <label>Video URL</label>
        <type>Url</type>
    </fields>
    <label>Application Subsection</label>
    <listViews>
        <fullName>All3</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>myView2</fullName>
        <columns>NAME</columns>
        <columns>License__c</columns>
        <filterScope>Everything</filterScope>
        <label>myView2</label>
    </listViews>
    <nameField>
        <label>Subsection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Subsections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>